# the-compute-bazaar

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  download_eirgrid.py  ie_dc_share.py  ireland_compute_map.py  ireland_dc_consumption.py  pyproject.toml
.github/workflows/: sandbox-cost-sources.yml
data-center-data-room/: README.md
deal-room/: README.md
docs/: architecture.md  benchmark-methodology.md  curia-engine.md  h100-market-comparison.md  paper-compute-search.md  provider-registry.md  provider-sources.md  public-dashboard.md  sandbox-cost-benchmark.md  stage1-review.md
docs/journal/: 2026-07-24-sandbox-cost-integration.md
infra/aws/: dashboard-cloudfront-bucket-policy.example.json  dashboard-cors.example.json  refresh_runtime_access.py
infra/aws/public-dashboard/: .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/windmill/: Dockerfile  README.md  bootstrap_market_schedule.py  bootstrap_provider_schedule.py  bootstrap_vast_schedule.py  lium_hourly.py  market_hourly.py  vast_hourly.py
infra/windmill/self-host/: .env.example  Caddyfile  Dockerfile.worker  docker-compose.yml
prototypes/compute-bazaar/: feeling_the_compute.html  operator.css  operator.html  operator.js  story.css  story.js
queries/curia/: benchmark_constituents_v0.sql  benchmark_values_v0.sql  catalog.json  excluded_index_candidates_v0.sql  frontier_listings_v0.sql  gold_table_counts_v0.sql  provider_comparison_v0.sql
src/the_compute_bazaar/: __init__.py  adamsioud.py  dashboard.py
src/the_compute_bazaar/papers/: __init__.py  openalex.py
src/the_compute_bazaar/prices/: __init__.py  automq.py  benchmark_queries.py  checks.py  cli.py  coverage.py  datafusion.py  events.py  gold.py  manifest.py  market_run.py  normalize.py  operator.py  pipeline.py  query_catalog.py  schemas.py  storage.py  tape.py
src/the_compute_bazaar/sandbox_cost/: __init__.py  cli.py  pipeline.py  refresh.py
tangents/: download_eirgrid.py  ie_flow_map.py  ie_grid_dashboard.py
tests/: test_adamsioud.py  test_dashboard.py  test_gpu_market_core.py  test_sandbox_cost.py
(+42 files in other folders)
