[project]
name = "the-compute-bazaar"
version = "0.1.0"
description = "Artefacts from tinkering with compute markets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awscli>=1.45.30",
    "boto3>=1.41.0",
    "confluent-kafka>=2.12.2",
    "datafusion>=51.0.0",
    "fastapi>=0.137.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=22.0.0",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
compute-bazaar-adamsioud = "the_compute_bazaar.adamsioud:main"
compute-bazaar-dashboard = "the_compute_bazaar.dashboard:main"
download-eirgrid = "the_compute_bazaar.tangents.download_eirgrid:main"
gpu-prices = "the_compute_bazaar.prices.cli:main"
ie-dc-consumption = "the_compute_bazaar.tangents.ireland_dc_consumption:main"
ie-dc-share = "the_compute_bazaar.tangents.ie_dc_share:main"
ie-flow-map = "the_compute_bazaar.tangents.ie_flow_map:main"
ie-grid-dashboard = "the_compute_bazaar.tangents.ie_grid_dashboard:main"
ireland-compute-map = "the_compute_bazaar.tangents.ireland_compute_map:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
